kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-deployment-name
  labels:
    name: docker-deployment-label
spec:
  selector:
    matchLabels:
      name: docker-pod-label
  replicas: 1
  template:
    metadata:
      name: docker-pod-name
      labels:
        name: docker-pod-label
    spec:
      volumes:
      - name: dind-storage
        emptyDir: {}
      containers:
      - name: docker-dind
        image: docker:18.09-dind
        securityContext:
          privileged: true
        volumeMounts:
        - name: dind-storage
          mountPath: /var/lib/docker
      - name: docker-container
        image: docker:18.09
        command: ["/bin/sh", "-c"]
        args: ["docker run -p 4000:$PORT tahsin/booklist-api:0.0.1 --port=$PORT"]
        ports:
        - name: booklist-port
          containerPort: 4000
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: docker-service
  labels:
    name: docker-service-label
spec:
  selector:
    name: docker-pod-label
  ports:
  - name: service-port
    protocol: TCP
    port: 8888
    targetPort: booklist-port
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: booklist-ingress
  labels:
    name: booklist-ingress-label
spec:
  rules:
  - host: mybooklist.com
    http:
      paths:
      - path: /
        backend:
          serviceName: docker-service
          servicePort: 8888
